@@ -1,3 +1,8 @@
+2019-09-27  David Malcolm  <dmalcolm@redhat.com>
+
+	* cgraph.c (cgraph_node::get_fun): Make const.
+	* cgraph.h (cgraph_node::get_fun): Likewise.
+
 2019-09-27  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/91919
